# react-native-lite-card

./: .gitignore  LICENSE  README.md  package.json  react-native-lite-card.podspec  react-native.base.config.js  tsconfig.json
.github/workflows/: package-publish.yml
android/: build.gradle  gradle.properties
android/src/main/cpp/: CMakeLists.txt
example/: app.json  package.json
example/android/: settings.gradle
example/ios/: File.swift  Podfile
example/react-native/: App.tsx  background.js  metro.config.js  package.json  route.tsx
example/src/: App.tsx
ios/Classes/: OKLiteManager.m  OKNFCBridge.mm
keys/: keys.c
native-modules/react-native-background-thread/: BackgroundThread.podspec  CONTRIBUTING.md  LICENSE  README.md  package.json  tsconfig.json
native-modules/react-native-check-biometric-auth-changed/: CONTRIBUTING.md  LICENSE  README.md  ReactNativeCheckBiometricAuthChanged.podspec  nitro.json  package.json  tsconfig.json
native-modules/react-native-cloud-kit-module/: CONTRIBUTING.md  CloudKitModule.podspec  LICENSE  README.md  nitro.json  package.json  tsconfig.json
native-modules/react-native-device-utils/: .gitignore  README.md  ReactNativeDeviceUtils.podspec  babel.config.js  nitro.json  package.json  tsconfig.build.json  tsconfig.json  turbo.json
native-modules/react-native-get-random-values/: LICENSE  README.md  ReactNativeGetRandomValues.podspec  babel.config.js  eslint.config.mjs  nitro.json  package.json  tsconfig.json
scripts/: create-nitro-module.js  setup-nitro-module.js
scripts/nitro/: README.md
src/: index.ts  types.ts
(+285 files in other folders)
